fixed rotate not showing image, after using crop

--- a/Hilo/Hilo/rotate/rotate.css
+++ b/Hilo/Hilo/rotate/rotate.css
@@ -21,6 +21,7 @@
 #image {
     margin: 0px auto;
     max-height: 85%;
+	display: block;
 }
 
 @media screen and (-ms-view-state: snapped) {
